--- a/index.html
+++ b/index.html
@@ -4,36 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prepbytes</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Prctice Assesment 1</h1>
-    <h1>tyuy</h1>
-    <hr>
-    <div>
-    <a href="https://www.prepbytes.com" target="_blank">link o a website open in a new tab</a>
-    </div>
-    &nbsp;&nbsp;
-    <div>
-    <a href="https://www.prepbytes.com" >Link to a website open in same tab</a>
-    </div>
-    &nbsp;&nbsp;
-    <div>
-        <a href="./index2.html">Link to internal File</a>
-    </div>
-    <div>
-        <p><b>Image kept inside the Folder</b></p>
-    <img src="./prep.png">
-    </div>
-    <div>
-        <p><b>Uploaded image</b></p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTU253WnVFvTIIvjZYxn9XuVVc-O1caPKh5PA&usqp=CAU">
-    </div>
-    <hr>
-    <div>
-        <h1>Lists</h1>
-        <a href="./index2.html">Click here</a>
-
-    </div>
+ <div>
+    <h1>Lists</h1>
+    <h2>Ordered Lists</h2>
+    <h4>Numeric</h4>
+    <ol type="1">
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ol>
+    <h4>Lowercase letters</h4>
+    <ol type="a">
+        <li>Item 1</li>
+        <li> Item 2</li>
+    </ol>
+    <h4>Uppercase Letters</h4>
+    <ol type="A">
+        <li>Item 1</li>
+        <li> Item 2</li>  
+    </ol>
+    <h4>Uppercase Roman Numbers</h4>
+    <ol type="I">
+        <li>Item 1</li>
+        <li> Item 2</li>  
+    </ol>
+   
+    <h4>Lowecase Roman Numbers</h4>
+    <ol type="i">
+        <li>Item 1</li>
+        <li> Item 2</li>  
+    </ol>
+    <h1>Unordered Lists</h1>
+    <h4>Default</h4>
+    <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    </ul>
+    <h4>None style</h4>
+    <ul type="None">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    </ul>
+    <h4>Disc style</h4>
+    <ul type="Disc">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    </ul>
+    <h4>Circle style</h4>
+    <ul type="Circle">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    </ul>
+    <h4>Square style</h4>
+    <ul type="Square">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    </ul>
+   <h1>Mix</h1>
+   <ul type="circle">
+    <li>Mobile Devlopment</li>
+    <li>Web devlopment</li>
+    </ul>
+    <ul type="disc">
+    <li>React</li>
+    <li>Angular</li>
+    </ul>
+    <ul type="square">
+    <li>Cloude service</li>
+    </ul>
+ </div>   
+ <a href="handson1.html">Go back</a>
 </body>
 </html>
